[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Themes/Espresso.tres" type="Theme" id=2]
[ext_resource path="res://Themes/Images/anticlockwise-rotation.png" type="Texture" id=3]
[ext_resource path="res://Themes/Images/play-button.png" type="Texture" id=4]
[ext_resource path="res://Themes/Images/pause-button.png" type="Texture" id=5]
[ext_resource path="res://SFX/Countdown1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Themes/Images/speaker-off.png" type="Texture" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -300.0
margin_bottom = -20.0
text = "Write here..."
draw_tabs = true
wrap_enabled = true

[node name="File" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -283.0
margin_top = 19.0
margin_right = -23.0
margin_bottom = 59.0
__meta__ = {
"_edit_group_": true
}

[node name="OpenFile" type="Button" parent="File"]
anchor_right = 0.461538
anchor_bottom = 1.0
text = "Open"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SaveFile" type="Button" parent="File"]
anchor_left = 0.538462
anchor_right = 1.0
anchor_bottom = 1.0
text = "Save As"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Counters" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -233.0
margin_top = 75.0
margin_right = -72.0
margin_bottom = 131.0
__meta__ = {
"_edit_group_": true
}

[node name="WordCount" type="Label" parent="Counters"]
margin_right = 161.0
margin_bottom = 26.0
text = "Word Count: 0"

[node name="CharCount" type="Label" parent="Counters"]
margin_top = 30.0
margin_right = 161.0
margin_bottom = 56.0
text = "Character Count: 0"

[node name="Customization" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -283.0
margin_top = 142.0
margin_right = -23.0
margin_bottom = 350.0
__meta__ = {
"_edit_group_": true
}

[node name="CustomizationTitle" type="Label" parent="Customization"]
margin_right = 260.0
margin_bottom = 26.0
text = "- - Customization - -"
align = 1

[node name="FullscreenButton" type="CheckButton" parent="Customization"]
margin_top = 30.0
margin_right = 260.0
margin_bottom = 70.0
text = "Fullscreen"

[node name="KeysoundPicker" type="OptionButton" parent="Customization"]
margin_top = 78.0
margin_right = 260.0
margin_bottom = 118.0
text = "No Sound"
items = [ "No Sound", null, false, 0, null, "Clicks", null, false, 1, null, "Boops", null, false, 2, null, "Shells", null, false, 3, null ]
selected = 0

[node name="FontPicker" type="OptionButton" parent="Customization"]
margin_top = 126.0
margin_right = 260.0
margin_bottom = 166.0
text = "Nunito"
items = [ "Nunito", null, false, 0, null, "Turpis", null, false, 1, null, "Steeped Tea", null, false, 2, null ]
selected = 0

[node name="ThemePicker" type="OptionButton" parent="Customization"]
margin_top = 174.0
margin_right = 260.0
margin_bottom = 214.0
text = "Espresso"
items = [ "Espresso", null, false, 0, null, "Skateboard", null, false, 1, null ]
selected = 0

[node name="PressureTimer" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -283.0
margin_top = 378.0
margin_right = -23.0
margin_bottom = 638.0
__meta__ = {
"_edit_group_": true
}

[node name="TimerStart" type="Button" parent="PressureTimer"]
margin_left = 6.0
margin_top = 213.0
margin_right = 59.0
margin_bottom = 266.0
icon = ExtResource( 4 )
expand_icon = true

[node name="TimerPause" type="Button" parent="PressureTimer"]
margin_left = 72.0
margin_top = 213.0
margin_right = 125.0
margin_bottom = 266.0
icon = ExtResource( 5 )
expand_icon = true

[node name="TimerReset" type="Button" parent="PressureTimer"]
margin_left = 139.0
margin_top = 213.0
margin_right = 192.0
margin_bottom = 266.0
icon = ExtResource( 3 )
expand_icon = true

[node name="TimerVolume" type="Button" parent="PressureTimer"]
margin_left = 206.0
margin_top = 213.0
margin_right = 259.0
margin_bottom = 266.0
icon = ExtResource( 7 )
expand_icon = true

[node name="TimerBar" type="ProgressBar" parent="PressureTimer"]
margin_top = 173.0
margin_right = 260.0
margin_bottom = 199.0
max_value = 1000.0
percent_visible = false

[node name="PressureTitle" type="Label" parent="PressureTimer"]
anchor_right = 1.0
margin_bottom = 26.0
text = "- - Pressure Timer - -"
align = 1

[node name="PressureDesc" type="Label" parent="PressureTimer"]
anchor_right = 1.0
margin_top = 26.0
margin_bottom = 110.0
text = "When time runs out, everything you've written gets deleted!"
align = 1
autowrap = true

[node name="TimerDifficulty" type="OptionButton" parent="PressureTimer"]
margin_top = 120.0
margin_right = 260.0
margin_bottom = 160.0
text = "Normal"
items = [ "Gentle", null, false, 0, null, "Normal", null, false, 1, null, "Hard", null, false, 2, null, "WTF", null, false, 3, null ]
selected = 1

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -197.0
margin_top = 661.0
margin_right = -113.0
margin_bottom = 693.0
text = "Credits"

[node name="KeysoundPlayer" type="AudioStreamPlayer" parent="."]

[node name="PressurePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="OpenDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -584.0
margin_top = -279.5
margin_right = 584.0
margin_bottom = 279.5
window_title = "Open a File"
mode = 0
access = 2

[node name="SaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -584.0
margin_top = -279.5
margin_right = 584.0
margin_bottom = 279.5
access = 2

[node name="CreditsDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -457.0
margin_top = -249.0
margin_right = 457.0
margin_bottom = 249.0
window_title = "Credits"
resizable = true
dialog_text = "Made by Percarus

App Icon by Azribee
UI Icons by Guard13007, Delapouite

Inspired by Write or Die by BurningApparatus & Stimuwrite by Eve Harms

Made for Azribee <3"
dialog_autowrap = true

[connection signal="pressed" from="File/OpenFile" to="." method="_on_OpenFile_pressed"]
[connection signal="pressed" from="File/SaveFile" to="." method="_on_SaveFile_pressed"]
[connection signal="toggled" from="Customization/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="item_selected" from="Customization/FontPicker" to="." method="_on_FontPicker_item_selected"]
[connection signal="item_selected" from="Customization/ThemePicker" to="." method="_on_ThemePicker_item_selected"]
[connection signal="pressed" from="PressureTimer/TimerStart" to="." method="_on_TimerStart_pressed"]
[connection signal="pressed" from="PressureTimer/TimerPause" to="." method="_on_TimerPause_pressed"]
[connection signal="pressed" from="PressureTimer/TimerReset" to="." method="_on_TimerReset_pressed"]
[connection signal="pressed" from="PressureTimer/TimerVolume" to="." method="_on_TimerVolume_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_OpenDialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
